2005-08-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/bus/Makefile.am:
	Add sparcPci.c to EXTRA_DIST.

2005-08-20  Daniel Stone  <daniel@fooishbar.org>

	* configure.ac:
	Make symlink-mesa.sh usage srcdir != objdir safe.
	Remove requirement for XF86Rush protocol headers, which we don't even
	use in the core server.

	* configure.ac:
	* xkb/Makefile.am:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am:
	Build libxkbstubs.la to stub XKB DDX functions (e.g. VT switches), and
	build libxorggxkb.la from within the Xorg DDX to replace the previous
	xf86VT.o, et al, hacks.

	* configure.ac:
	* GL/**/Makefile.am:
	* hw/xfree86/dri/Makefile.am:
	Make DRI/GLcore builds srcdir != builddir safe, and invoke
	symlink-mesa.sh in our builddir, not our srcdir.

2005-08-19  Søren Sandmann  <sandmann@redhat.com>

	* fb/Makefile.am (libfbmmx_la_CFLAGS): Move fbmmx to a convenience
	library since the mmx flags may be harmful when applied to non-mmx
	code.

2005-08-17  Søren Sandmann  <sandmann@redhat.com>

	* Xext/Makefile.am: Conditionally compile in xprint.c

	* Makefile.am, configure.ac: Add Xprint

2005-08-16  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/Makefile.am: Add ft and type1 modules.

2005-08-15  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/extmod/Makefile.am (libextmod_la_LIBADD):
	Link this module with libXext.la.

Mon Aug 15 14:56:57 2005  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/dixmods/Makefile.am (libdixmods_la_SOURCES): Remove
	the xkb* files.

	* hw/xfree86/Makefile.am (Xorg_LDADD): Add xkbVT.o and friends as
	the last things on the link line so they will override the symbols
	in libxkb.a.  Add a comment on how this situation might not be
	considered ideal.

2005-08-08  Søren Sandmann  <sandmann@redhat.com>

	* include/xorg-config.h.in: #undef PIXPRIV here.

2005-08-07  Keith Packard  <keithp@keithp.com>

	* include/dix-config.h.in:
	Re-add _XOPEN_SOURCE as it's needed *sometimes*.