@@ -11,6 +11,10 @@ if LINUX_IA64
 PLATFORM_PCI_SOURCES = 460gxPCI.c altixPCI.c e8870PCI.c zx1PCI.c
 endif
 
+if LINUX_SPARC
+PLATFORM_PCI_SOURCE = sparcPci.c
+endif
+
 libbus_la_SOURCES = Pci.c $(PCI_SOURCES) $(PLATFORM_PCI_SOURCES)
 
 if XORG_BUS_SBUS
@@ -34,4 +38,3 @@ EXTRA_DIST = \
 	zx1PCI.h \
 	xf86Sbus.h \
         $(PCIDISTSOURCES)
-
